--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,51 @@
       href="https://fonts.googleapis.com/css2?family=Creepster&family=Merienda:wght@300..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Generador de excusas</title>
   </head>
   <body>
-    <div>
-      <h1 class="titulo">Generador de excusas</h1>
+    <div class="container pt-5 mt-5 d-flex justify-content-center">
+      <h1 class="fs-1">Generador de excusas</h1>
     </div>
-    <div class="excusas">
-      <p id="excusa">Mi perro se comio los deberes mientras estaba cenando</p>
+    <div class="container d-flex justify-content-center ">
+      <p id="excusa" class="fs-3">
+        Mi perro se comio los deberes mientras estaba cenando
+      </p>
     </div>
 
-    <div id="boton">
-      <button id="btn" type="button" onclick="press()">!Vamos!</button>
+    <div id="boton" class="container d-flex justify-content-center pt-3">
+      <button
+        id="btn"
+        type="button"
+        class="btn btn-outline-dark"
+        onclick="press()"
+      >
+        !Go!
+      </button>
     </div>
+    <div class="container d-flex justify-content-center mt-4">
+      <input id="nuevoQuien" type="text" />
+      <button id="agregar" class="btn btn-outline-dark">Añadir</button>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
     <script src="app.js"></script>
   </body>
 </html>
