--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         !Go!
       </button>
     </div>
-    <div class="container d-flex justify-content-center mt-3 mb-3">
+    <div class="container d-flex justify-content-center mt-4 mb-2">
       <h3>añade tus ideas</h3>
     </div>
     <div
@@ -49,7 +49,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="container d-flex justify-content-center mt-4">
-            <h5 class="me-2">Quien</h5>
+            <h4 class="me-2 mt-2">Quien</h4>
             <input id="nuevoQuien" type="text" />
             <button id="agregarQuien" class="btn btn-outline-dark">
               Añadir
@@ -58,7 +58,7 @@
         </div>
         <div class="carousel-item">
           <div class="container d-flex justify-content-center mt-4">
-            <h5 class="me-2">Acto</h5>
+            <h4 class="me-2 mt-2">Accion</h4>
             <input id="nuevoActo" type="text" />
             <button id="agregarActo" class="btn btn-outline-dark">
               Añadir
@@ -67,14 +67,14 @@
         </div>
         <div class="carousel-item">
           <div class="container d-flex justify-content-center mt-4">
-            <h5 class="me-2">Que</h5>
+            <h4 class="me-2 mt-2">Que</h4>
             <input id="nuevoQue" type="text" />
             <button id="agregarQue" class="btn btn-outline-dark">Añadir</button>
           </div>
         </div>
         <div class="carousel-item">
           <div class="container d-flex justify-content-center mt-4">
-            <h5 class="me-2">Cuando</h5>
+            <h4 class="me-2 mt-2">Cuando</h4>
             <input id="nuevoCuando" type="text" />
             <button id="agregarCuando" class="btn btn-outline-dark">
               Añadir
@@ -100,8 +100,10 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+      <div class="container mt-5 d-flex justify-content-center">
+        <strong><p>Social network:</p></strong>
+        <a href="https://github.com/StevenSanz" target="_blank"><i class="ms-2 fa-brands fa-github fa-bounce fa-lg" style="color: #000000;"></i></a>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -113,5 +115,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="app.js"></script>
+    <script
+      src="https://kit.fontawesome.com/072e5df971.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
